--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "description": "Front-end and API for Signifly Case",
   "scripts": {
+    "clean" : "npm --prefix ./case-fe npm run clean",
+    "bclean" : "./clean.sh",
+    "binstall" : "./install.sh",
     "dev": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "concurrently": "^7.6.0"
+  }
 }
