--- a/case-fe/package.json
+++ b/case-fe/package.json
@@ -22,17 +22,20 @@
     "reactjs-popup": "*",
     "sass": "^1.60.0",
     "styled-components": "^5.3.5",
-    "typescript": "*"
-    "pk-ts-common-lib": "git+https://github.com/pkirkaas/pk-ts-common-lib.git#working",
+    "typescript": "*",
+    "pk-ts-common-lib": "git+https://github.com/pkirkaas/pk-ts-common-lib.git#working"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.2.0"
-        "@typescript-eslint/eslint-plugin": "*",
+    "@types/react": "*",
+    "@types/react-dom": "*",
+    "@vitejs/plugin-react": "*",
+    "vite": "*",
+    "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
     "eslint": "*",
+    "eslint-config-react-app": "*",
+    "eslint-plugin-react": "*",
+    "eslint-plugin-react-hooks": "*",
     "eslint-config-prettier": "*",
     "eslint-plugin-prettier": "*",
     "prettier": "*",
