--- a/case-fe/package.json
+++ b/case-fe/package.json
@@ -14,31 +14,32 @@
     "react-resize-panel": "*"
   },
   "dependencies": {
+    "pk-ts-common-lib": "git+https://github.com/pkirkaas/pk-ts-common-lib.git#working",
     "react": "^18.2.0",
     "react-dom": "*",
+    "react-grid-layout": "^1.3.4",
     "react-json-tree": "*",
     "react-router-dom": "*",
     "react-table": "*",
     "reactjs-popup": "*",
     "sass": "^1.60.0",
     "styled-components": "^5.3.5",
-    "typescript": "*",
-    "pk-ts-common-lib": "git+https://github.com/pkirkaas/pk-ts-common-lib.git#working"
+    "typescript": "*"
   },
   "devDependencies": {
     "@types/react": "*",
     "@types/react-dom": "*",
-    "@vitejs/plugin-react": "*",
-    "vite": "*",
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
+    "@vitejs/plugin-react": "*",
     "eslint": "*",
+    "eslint-config-prettier": "*",
     "eslint-config-react-app": "*",
+    "eslint-plugin-prettier": "*",
     "eslint-plugin-react": "*",
     "eslint-plugin-react-hooks": "*",
-    "eslint-config-prettier": "*",
-    "eslint-plugin-prettier": "*",
     "prettier": "*",
-    "typescript": "*"
+    "typescript": "*",
+    "vite": "*"
   }
 }
