--- a/case-api/package.json
+++ b/case-api/package.json
@@ -43,6 +43,9 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
-    "prisma": "^4.11.0"
+    "prisma": "^4.11.0",
+    "prisma-dbml-generator": "*"
   }
+
+  
 }
